--- a/Sealena/static/base/css/base.css
+++ b/Sealena/static/base/css/base.css
@@ -555,6 +555,7 @@ button:focus{
 }
 
 ::-webkit-scrollbar-track {
+    border-radius: 8px;
     background: rgba(255,255,255,0.1);
 }
 
@@ -564,7 +565,7 @@ button:focus{
 }
 
 ::-webkit-scrollbar-corner {
-  background: rgba(0,0,0,0);
+    background: rgba(0,0,0,0);
 }
 
 /*//////////////////////////////////////////////// Controllers ///////////////////////////////////////////////////////*/
